# IELET2111-task3-i2c_slave

./: .gitignore  Arbeidsavtale.md  I2C-group7.atsln  Overordnede mål for utførelse.md  README.md  platformio.ini
Dokumentasjon fra BB/info fra i fjor/: Oppgaveinfo.md
I2C-group7/: I2C-group7.componentinfo.xml  I2C-group7.cproj  configuration.h  main.c
I2C-group7/Debug/: I2C-group7.elf  I2C-group7.hex  I2C-group7.lss  I2C-group7.map  I2C-group7.srec  Makefile  main.d  makedep.mk
I2C-group7/Debug/hardware/: init.d  read.d
I2C-group7/hardware/: datastructure.h  dip-switch.c  dip-switch.h  fan-monitor.c  fan-monitor.h  init.c  init.h  read.c  read.h  seven-segment.c  seven-segment.h  system.c  system.h  thermistor.c  thermistor.h  voltages.c  voltages.h
I2C-group7/lib/: adc.c  adc.h  builtins.c  builtins.h  eeprom.c  eeprom.h  rtc.c  rtc.h  thermistor.c  thermistor.h  twi.c  twi.h  usart.c  usart.h
I2C-group7/protocol/: I2C.c  I2C.h  I2C_packet.h  logging.h
I2C-group7/util/: stat.c  stat.h
Kretsskjema/: #auto_saved_files#  IELET2111.kicad_prl  IELET2111.kicad_pro  IELET2111.kicad_sch  projectlib.kicad_sym  sym-lib-table
Kretsskjema/Libraries/kicad-symbols-master/: .gitlab-ci.yml  Audio.kicad_sym  CMakeLists.txt  Converter_ACDC.kicad_sym  Device.kicad_sym  Diode.kicad_sym  Driver_LED.kicad_sym  Graphic.kicad_sym  Interface_Expansion.kicad_sym  Memory_EEPROM.kicad_sym  Memory_NVRAM.kicad_sym  README.md  Regulator_Controller.kicad_sym  Regulator_Linear.kicad_sym  Regulator_Switching.kicad_sym  Sensor_Audio.kicad_sym  Sensor_Gas.kicad_sym  Sensor_Pressure.kicad_sym  Transformer.kicad_sym  Transistor_FET.kicad_sym
Kretsskjema/Libraries/kicad-symbols-master/obsolete/: MCU_Infineon.dcm  Memory_RAM.dcm
src/: configuration.h  main.c
src/hardware/: init.c  init.h  read.c
src/lib/: twi.c  twi.h
src/protocol/: I2C.c  I2C.h  I2C_packet.h
tools/: make-and-listen.sh
tools/esp32_i2c_master_usart_bridge/: platformio.ini
(+40 files in other folders)
